--- a/app/components/root.hbs
+++ b/app/components/root.hbs
@@ -6,10 +6,15 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    gap: 24px;
   "
 >
 
-<h1>Safari scroll bug demo</h1>
+<h1 style="margin: 0; margin-top: 24px">Safari scroll bug demo</h1>
+
+<div>
+  Repo: <a href="https://github.com/icsfoley/safari-scroll-bug">https://github.com/icsfoley/safari-scroll-bug</a>
+</div>
 
 {{#if (not this.hasClickedButton)}}
   <div>
